--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about" class="about-section">
       <h2>About Me</h2>
       <img src="images/katarina_profile_picture.png" alt="Profile picture" class="profile-pic">
-      <p>Hello! My name is Katarina Duric and I am a Master's student in Electrical and Computer Engineering at Cornell University. My interests lie in Digital and Analog VLSI Design, digital verification and RTL design, as well as hardware design. Below you can find some of my projects!</p>
+      <p>Hello! My name is Katarina Duric and I am a Master's student in Electrical and Computer Engineering at Cornell University. My interests lie in Digital/Analog/Physical Design, digital verification and RTL design, as well as hardware design. Below you can find some of my projects!</p>
     </section>
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
